[metadata]
name = ssh-tools
version = 0.0.1
description = A cli program to interface easily with servers via ssh
long_description = file: README.md
author = Ethan Shoham

[options]
package_dir = 
    =src
include_package_data = True
packages = find:
install_requires =
    rich
    pandas
    paramiko
    cmd2

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    ssht = sshtools.main:main



