[metadata]
name = ssh-tools
version = 0.0.1
description = A cli program to interface easily with servers via ssh
long_description = file: README.md
long_description_content_type = text/markdown
author = Ethan-S-Dev
license = MIT
classifiers =
    Framework :: CMD2
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
package_dir = 
    =src
include_package_data = True
packages = find:
install_requires =
    pandas
    paramiko
    cmd2
    tqdm

[options.packages.find]
where=
    src

[options.entry_points]
console_scripts =
    ssht = sshtools.main:main



